# shuttle-monitoring-template

./: Cargo.toml  README.md
migrations/: 20240206193600_init.sql
src/: main.rs
templates/: base.html  index.html  single_website.html  styles.css
